[package]
name = "gpupodem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu", features = ["trace"] }
pollster = "0.2.5"
serde = { version = "1.0.136", features = ["derive"] }
bytemuck = { git = "https://github.com/peters-david/bytemuck", features = ["derive"] }
lazy_static = "1.4.0"
env_logger = "0.9.0"
